<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AptiMob</string>
    <string name="progress_create_account">Creating new account…</string>
    <string name="Available">Available</string>
    <string name="Occupied">Occupied</string>
    <string name="UserCurrentStatus">Your current status is:</string>
    <string name="AddGmailAccount">Add Gmail account</string>
    <string name="QuestionConfigureGmail">Message notifications rely on a Gmail account, but you don\'t seem to have one configured. Would you like to configure one now?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_messages">Messages</string>
    <string name="Availability">Availability</string>
    <string name="Messages">Messages</string>
    <string name="title_activity_message_detail">Message</string>
    <string name="action_settings">Settings</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="Subject">Subject:</string>
    <string name="Reply">Reply</string>
    <string name="Send">Send</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="message_sent">Message Sent</string>
    <string name="scenarios">Scenarios</string>
    <string name="title_activity_scenarios">Scenarios</string>
    <string name="rest_url">https://www.nitri.de/aptimob/rest/</string>

</resources>