<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_availability"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip" >

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:text="@string/UserCurrentStatus"
            android:textAlignment="center" >
        </TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:textAlignment="center" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dip" >

            <Button
                android:id="@+id/button_available"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="10dp"
                android:background="@drawable/green_button_background"
                android:text="@string/Available" />

            <Button
                android:id="@+id/button_occupied"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_margin="10dp"
                android:background="@drawable/red_button_background"
                android:text="@string/Occupied" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_scenarios"
            android:layout_width="180dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scenarios" />
    </RelativeLayout>

</LinearLayout>