<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="12dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/toLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/subjectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Subject"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subjectField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="12dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/bodyField"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="fill_parent"
                android:layout_above="@+id/sendButton"
                android:ems="10"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/Send" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>